# document-intelligence-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: chaos.yml  ci.yml
eval/: offline_eval.py  ragas_metrics.py  thresholds.yaml
eval/golden_dataset/: queries.json
finsight/agents/: graph_agent.py  orchestrator.py  retrieval_agent.py  synthesis_agent.py
finsight/auth/: oauth_server.py  scope_definitions.py  token_validator.py
finsight/config/: settings.py
finsight/gateway/: api.py  db.py
finsight/harness/: eval_harness.py  input_harness.py  output_harness.py
finsight/ingestion/: embedder.py  entity_extractor.py  ingest.py  neo4j_writer.py  qdrant_writer.py  stream_backend.py
finsight/mcp_servers/: llm_server.py  neo4j_server.py  qdrant_server.py  registry.py  reranker_server.py
finsight/mlops/: drift_detector.py  model_registry.py  prompt_registry.py  reindex_pipeline.py
finsight/models/: base.py  graph.py  retrieval.py  synthesis.py  tenant.py
finsight/services/: circuit_breaker.py  guardrails.py  llm.py  metrics.py  reranker.py  retrieval.py  sparse_encoder.py  vector_store.py
finsight/telemetry/: tracing.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infra/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
prompts/: faithfulness_judge_v1.txt  query_classifier_v1.txt  synthesis_v1.txt
scripts/: ingest_test_doc.py  migrate.py  run_ingestion.py  seed_canonical_entities.py  seed_tenants.py
tests/: test_circuit_breaker.py  test_drift_detector.py  test_eval_harness.py  test_guardrails.py  test_mcp_llm.py  test_mcp_neo4j.py  test_mcp_qdrant.py  test_mcp_registry.py  test_mcp_reranker.py  test_metrics.py  test_model_registry.py  test_prompt_registry.py  test_reindex_pipeline.py  test_streaming.py
tests/unit/: test_api.py  (+22 more)
(+18 files in other folders)
