[project]
name = "finsight"
version = "0.1.0"
description = "Enterprise document intelligence platform for financial and insurance institutions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    "redis[hiredis]>=5.0.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "yoyo-migrations>=8.2.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT>=2.8.0",
    "prometheus-client>=0.20.0",
    "langfuse>=2.0.0",
    "mlflow>=2.13.0",
    "ragas>=0.1.0,<0.2.0",
    "datasets>=2.14.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
dev = [

    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not eval and not chaos'"
markers = [
    "eval: requires live services and golden dataset",
    "chaos: chaos engineering tests requiring full stack",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
